--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"require": {
-        "zendframework/zendframework": "2.3.*",
+        "zendframework/zendframework": "2.3.0",
         "doctrine/doctrine-module": "dev-master",
         "doctrine/doctrine-orm-module": "dev-master",
         "zendframework/zend-developer-tools": "dev-master"
